--- a/java-maven-app-master/Jenkinsfile
+++ b/java-maven-app-master/Jenkinsfile
@@ -1,41 +1,22 @@
-def gv
-
-pipeline {   
+pipeline{
     agent any
-    tools {
-        maven 'Maven'
+    stages{
+        stage('Build'){
+            steps{
+                echo 'Building..'
+                
+            }
+        }
+        stage('Test'){
+            steps{
+                echo 'Testing..'
+                
+            }
+        }
+        stage('Deploy'){
+            steps{
+                echo 'Deploying....'
+            }
+        }
     }
-    stages {
-        stage("init") {
-            steps {
-                script {
-                    gv = load "script.groovy"
-                }
-            }
-        }
-        stage("build jar") {
-            steps {
-                script {
-                    gv.buildJar()
-
-                }
-            }
-        }
-
-        stage("build image") {
-            steps {
-                script {
-                    gv.buildImage()
-                }
-            }
-        }
-
-        stage("deploy") {
-            steps {
-                script {
-                    gv.deployApp()
-                }
-            }
-        }               
-    }
-} 
+}
